[package]
name = "rust-utoipa-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" ,features = ["tracing"]}
hyper = { version = "1.5.0", features = ["server"] }
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "5.1.3", features = ["axum_extras"] }
utoipa-axum = { version = "0.1.2" }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
serde = { version = "1.0.214", features = ["derive"] }
