[package]
name = "rust-utoipa-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1",features = ["tracing"]}
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
serde = { version = "1.0.217", features = ["derive"] }
